# FrameFlow

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test-file.webm
docs/: 03_tool_prd_v2.md  04_mvp0_prd.md  04_technical_design.md  05_epics_and_tickets.md  20-business-topics.md  readme.md  whisper_fidelity.md
src/clarity/: __init__.py  __main__.py  audio_loader.py
src/clarity/analysis/: __init__.py  client.py  models.py  prompts.py
src/clarity/analyzers/: __init__.py  analyzer.py  energy_analyzer.py  filler_detector.py  pause_detector.py  pitch_analyzer.py  speaking_rate.py  transcriber.py
src/clarity/commands/: __init__.py  history.py  practice.py  review.py  status.py  weekly.py
src/clarity/config/: __init__.py  manager.py
src/clarity/feedback/: __init__.py  progress.py  scorecard.py  tips.py  trends.py
src/clarity/reporting/: __init__.py  csv_logger.py  plotter.py  report_generator.py
src/clarity/session/: __init__.py  baseline.py  focus_skills.py  framework_assignment.py  phase_config.py  setup.py  topics.py  warmup.py
src/clarity/setup/: __init__.py  first_run.py
src/clarity/storage/: __init__.py  manager.py
src/clarity/transcription/: __init__.py  metrics.py  whisper_service.py
tests/: __init__.py  filler_fidelity_test.py  readme.md  test_analysis.py  test_analyzers.py  test_audio_loader.py  test_calibration.py  test_cli.py  test_config.py  test_integration.py  test_reporting.py  test_session.py  test_storage.py  test_transcription.py
tests/fixtures/: README.md
